Cambio en el orden

--- a/Tatiana-Bot/templates/Index2.html
+++ b/Tatiana-Bot/templates/Index2.html
@@ -10,7 +10,7 @@
     <div class="navbar navbar-inverse navbar-fixed-top", style="background: teal">
 
     </div>
-    <div align=""><img src="CSS/Imagenes/Cartoon_Robot.png" height="600" width="600"/></div>
+    <div align=""><img src="../imagenes/Cartoon_Robot.png" height="600" width="600"/></div>
     </div>
     <div class="container">
             {% block body %}{% endblock %}
