--- a/Tatiana-Bot/templates/Informacion.html
+++ b/Tatiana-Bot/templates/Informacion.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-     <link rel="stylesheet" type="text/css" href="CSS/Principal.css">
+     <link rel="stylesheet" type="text/css" href="../static/CSS/Principal.css">
     <title>Solicitar informacion</title>
 
 </head>
-<body background="CSS/Imagenes/Fondo2.png">
+<body background="../imagenes/Fondo2.png">
     <div>
         <div>
-             <img src="CSS/Imagenes/Cartoon_Robot.png" align="Center" height="800" width="650"/>
+             <img src="../imagenes/Cartoon_Robot.png" align="Center" height="800" width="650"/>
         </div>
     </div>
 </body>
