Herencia y abs de clases

--- a/Tatiana-Bot/templates/Informacion.html
+++ b/Tatiana-Bot/templates/Informacion.html
@@ -6,7 +6,7 @@
     <title>Solicitar informacion</title>
 
 </head>
-<body background="../imagenes/Fondo2.png">
+<body bgcolor="#008b8b">
     <div>
         <div>
              <img src="../imagenes/Cartoon_Robot.png" align="Center" height="800" width="650"/>
