Cambio de herencia

--- a/Tatiana-Bot/templates/Informacion.html
+++ b/Tatiana-Bot/templates/Informacion.html
@@ -8,9 +8,27 @@
 </head>
 <body bgcolor="#008b8b">
     <div>
-        <div>
-             <img src="../imagenes/Cartoon_Robot.png" align="Center" height="800" width="650"/>
-        </div>
+        <TABLE>
+            <TR>
+                <TD width="200" height="200">
+                </TD>
+                <TD width="800" height="800">
+                     <img src="../imagenes/Cartoon_Robot.png" align="Center" height="800" width="650"/>
+                </TD>
+                <TD width="800" height="800">
+                    <h2>Nombre del Bot</h2>
+                    <input type="text" name="nombre">
+                    <h2>ID:</h2>
+                    <h3>   Valor</h3>
+                    <h2>Creador: </h2>
+                    <h3>   Eylen Fernández</h3>
+                    <h2>Fecha de creacion</h2>
+                    <h3>   fecha_hoy</h3>
+                </TD>
+            </TR>
+        </TABLE>
+
+
     </div>
 </body>
 </html>
